# seqme-esmif1

./: README.md  pyproject.toml
src/esmif1/: model.py
