[project]
name = "esmif1"
version = "0.1.0"
description = "ESM inverse-folding model"
readme = "README.md"
requires-python = ">=3.11,<3.12"
dependencies = [
    "biotite==0.41.2",
    "fair-esm>=2.0.0",
    "scipy>=1.17.1",
    "torch>=2.10.0",
    "torch-geometric>=2.7.0",
    "torch-scatter>=2.1.2",
    "tqdm>=4.67.3",
]

[tool.uv.extra-build-dependencies]
"torch-scatter" = ["torch"]

[build-system]
requires = ["uv_build>=0.9.18,<0.10.0"]
build-backend = "uv_build"
