[project]
name = "esmif1"
version = "0.1.0"
requires-python = ">=3.11,<3.12"
dependencies = [
    "biotite==0.41.2",
    "fair-esm>=2.0.0",
    "scipy>=1.11.0",
    "torch==2.10.0",
    "torch-geometric>=2.3.0",
    "tqdm>=4.67.3",
    "torch-scatter",
]

[tool.uv]
find-links = [
    "https://data.pyg.org/whl/torch-2.10.0+cpu.html",
    "https://data.pyg.org/whl/torch-2.10.0+cu126.html",
    "https://data.pyg.org/whl/torch-2.10.0+cu128.html",
    "https://data.pyg.org/whl/torch-2.10.0+cu130.html",
]

[[tool.uv.index]]
name = "pypi"
url = "https://pypi.org/simple"

[build-system]
requires = ["uv_build>=0.9.18,<0.10.0"]
build-backend = "uv_build"